k8s/deploy/pgadmin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pgadmin
spec:
  selector:
    app: pgadmin
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
