k8s/deploy/pgadmin/ingress.yaml
# https://doc.traefik.io/traefik/providers/kubernetes-ingress/#ingressclass

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: pgadmin.tools.k3d.contoso.com
      http:
        paths:
          - backend:
              serviceName: pgadmin
              servicePort: 80
            path: /
  tls:
    - secretName: tools-wildcard-cert
